--- a/index.html
+++ b/index.html
@@ -121,7 +121,24 @@
 								</div><!--//resume-timeline-->
 							</div>
 						</section><!--//experience-section-->
-					</div>
+						<section class="resume-section experience-section mb-5">
+							<h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Certifications</h2>
+							<div class="resume-timeline-item-header mb-2">
+								<div class="d-flex flex-column flex-md-row">
+									<h3 class="resume-position-title font-weight-bold mb-1">
+										AWS Certificated Solutions Architect - Associate
+									</h3>
+								</div>
+								<div class="resume-position-time">2022 - 2025</div>
+								<div class="d-flex flex-column flex-md-row">
+									<h3 class="resume-position-title font-weight-bold mb-1">
+										Japanese-Language Proficiency Test, JLPT
+									</h3>
+								</div>
+								<div class="resume-position-time">2017 - Precent</div>
+							</div><!--//resume-timeline-item-header-->
+						</section>
+						</div>
 					<div class="col-lg-3">
 						<section class="resume-section skills-section mb-5">
 							<h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Skills &amp;
