Add openAPI experience to resume

--- a/index.html
+++ b/index.html
@@ -67,7 +67,15 @@
 				<section class="resume-section summary-section mb-5">
 					<h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Career Summary</h2>
 					<div class="resume-section-content">
-						<p class="mb-0">Summarize your career here.Summarize your career here.Summarize your career here.Summarize your career here.Summarize your career here.Summarize your career here.Summarize your career here.Summarize your career here.Summarize your career here.Summarize your career here.Summarize your career here.Summarize your career here.Summarize your career here.Summarize your career here.Summarize your career here.Summarize your career here.Summarize your career here.Summarize your career here.Summarize your career here.Summarize your career here.Summarize your career here.Summarize your career here.Summarize your career here.Summarize your career here.Summarize your career here.</p>
+						<p class="mb-0">Summarize your career here.Summarize your career here.Summarize your career
+							here.Summarize your career here.Summarize your career here.Summarize your career
+							here.Summarize your career here.Summarize your career here.Summarize your career
+							here.Summarize your career here.Summarize your career here.Summarize your career
+							here.Summarize your career here.Summarize your career here.Summarize your career
+							here.Summarize your career here.Summarize your career here.Summarize your career
+							here.Summarize your career here.Summarize your career here.Summarize your career
+							here.Summarize your career here.Summarize your career here.Summarize your career
+							here.Summarize your career here.</p>
 					</div>
 				</section><!--//summary-section-->
 
@@ -87,21 +95,53 @@
 											</div><!--//row-->
 											<div class="resume-position-time">2019/12 - Present</div>
 										</div><!--//resume-timeline-item-header-->
-										<div class="resume-timeline-item-desc">
-											<p>Lead a team to renew the statement website.</p>
-											<h4 class="resume-timeline-item-desc-heading font-weight-bold">
-												Responsibilities:</h4>
-											<ul>
-												<li>Examined the source code and specifications to ascertain the
-													underlying requirements.</li>
-												<li>Designed flexible code architecture to adapt to constantly changing
-													requirements.</li>
-												<li>Observed team members' characteristics, assigned tasks accordingly,
-													and facilitated team development.</li>
-											</ul>
-										</div><!--//resume-timeline-item-desc-->
-									</article><!--//resume-timeline-item-->
-
+										<div class="resume-timeline-item-child position-relative">
+											<div class="resume-timeline-item-header mb-2">
+												<div class="d-flex flex-column flex-md-row">
+													<h4 class="resume-position-title font-weight-bold mb-1">
+														Lead to renew customer support system
+													</h4>
+												</div>
+											</div>
+											<div class="resume-timeline-item-desc">
+												<p>Lead the team in insourcing a system outsourced for 30 years.</p>
+												<h4 class="resume-timeline-item-desc-heading font-weight-bold">
+													Responsibilities:</h4>
+												<ul>
+													<li>Examined the source and specifications to ascertain the
+														underlying requirements.</li>
+													<li>Designed flexible code architecture to adapt to constantly
+														changing requirements.</li>
+													<li>Provide support to team members and conduct code reviews.</li>
+													<li>Break down tasks and distribute them to ensure smooth
+														implementation.</li>
+												</ul>
+											</div><!--//resume-timeline-item-desc-->
+										</div>
+										<div class="resume-timeline-item-child position-relative">
+											<div class="resume-timeline-item-header mb-2">
+												<div class="d-flex flex-column flex-md-row">
+													<h4 class="resume-position-title font-weight-bold mb-1">
+														Manage and mantain openAPI system
+													</h4>
+												</div>
+											</div>
+											<div class="resume-timeline-item-desc">
+												<p>Manage OpenAPI system operations and feature planning with
+													programming expertise.</p>
+												<h4 class="resume-timeline-item-desc-heading font-weight-bold">
+													Responsibilities:</h4>
+												<ul>
+													<li>Develop SDK with python for daily mantainence and test</li>
+													<li>Adopt automatic test framework for user acceptance test </li>
+													<li>Automate daily tasks using shell scripting, Python, Docker, and
+														more.</li>
+													<li>Collaborate with user departments and vendors to perform system
+														development.</li>
+												</ul>
+											</div><!--//resume-timeline-item-desc-->
+										</div><!--//resume-timeline-item-->
+									</article>
 									<article class="resume-timeline-item position-relative pb-5">
 										<div class="resume-timeline-item-header mb-2">
 											<div class="d-flex flex-column flex-md-row">
@@ -122,7 +162,8 @@
 							</div>
 						</section><!--//experience-section-->
 						<section class="resume-section experience-section mb-5">
-							<h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Certifications</h2>
+							<h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Certifications
+							</h2>
 							<div class="resume-timeline-item-header mb-2">
 								<div class="d-flex flex-column flex-md-row">
 									<h3 class="resume-position-title font-weight-bold mb-1">
@@ -138,7 +179,7 @@
 								<div class="resume-position-time">2017 - Precent</div>
 							</div><!--//resume-timeline-item-header-->
 						</section>
-						</div>
+					</div>
 					<div class="col-lg-3">
 						<section class="resume-section skills-section mb-5">
 							<h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Skills &amp;
@@ -243,11 +284,15 @@
 									<h4 class="resume-skills-cat font-weight-bold">Others</h4>
 									<ul class="list-inline">
 										<li class="list-inline-item"><span class="badge badge-light">Git</span></li>
-										<li class="list-inline-item"><span class="badge badge-light">Code Review</span></li>
+										<li class="list-inline-item"><span class="badge badge-light">Code Review</span>
+										</li>
 										<li class="list-inline-item"><span class="badge badge-light">Mysql</span></li>
-										<li class="list-inline-item"><span class="badge badge-light">PostgreSql</span></li>
-										<li class="list-inline-item"><span class="badge badge-light">Agile Dev</span></li>
-										<li class="list-inline-item"><span class="badge badge-light">Leadership Experience</span></li>
+										<li class="list-inline-item"><span class="badge badge-light">PostgreSql</span>
+										</li>
+										<li class="list-inline-item"><span class="badge badge-light">Agile Dev</span>
+										</li>
+										<li class="list-inline-item"><span class="badge badge-light">Leadership
+												Experience</span></li>
 									</ul>
 								</div>
 							</div>
