Add Career Summary

--- a/index.html
+++ b/index.html
@@ -67,15 +67,16 @@
 				<section class="resume-section summary-section mb-5">
 					<h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Career Summary</h2>
 					<div class="resume-section-content">
-						<p class="mb-0">Summarize your career here.Summarize your career here.Summarize your career
-							here.Summarize your career here.Summarize your career here.Summarize your career
-							here.Summarize your career here.Summarize your career here.Summarize your career
-							here.Summarize your career here.Summarize your career here.Summarize your career
-							here.Summarize your career here.Summarize your career here.Summarize your career
-							here.Summarize your career here.Summarize your career here.Summarize your career
-							here.Summarize your career here.Summarize your career here.Summarize your career
-							here.Summarize your career here.Summarize your career here.Summarize your career
-							here.Summarize your career here.</p>
+						<p class="mb-0">
+							As an experienced Software Engineer with over 4 years in the field, 
+							I have spearheaded significant projects at Credit Saison,
+							notably leading the insourcing of a long-outsourced system and managing OpenAPI system operations.
+							My expertise spans across backend development with Java/Spring Boot, PHP, Python and front-end development using JavaScript (Svelte.js).
+							I'm well-versed in DevOps & CI/CD, employing tools such as Shell script, Linux, Docker, GitHub Action, and AWS.
+							I also have skills in Git, code review, MySQL, PostgreSQL, and agile development methodologies.
+							During my internship at OnePlus, I developed a lightweight AI training database and a predictive app preloader.
+							I am fluent in Mandarin, Japanese, and English.
+						</p>
 					</div>
 				</section><!--//summary-section-->
 
