--- a/index.html
+++ b/index.html
@@ -53,9 +53,6 @@
 												class="fa-container text-center me-2"><i
 													class="fab fa-github-alt fa-fw"></i></span>github.com/FATESAIKOU</a>
 									</li>
-									<li><a class="text-link" href="https://yourwebsite.com"><span
-												class="fa-container text-center me-2"><i
-													class="fas fa-globe"></i></span>yourwebsite.com</a></li>
 								</ul>
 							</div><!--//secondary-info-->
 						</div><!--//row-->
@@ -72,7 +69,7 @@
 							I have spearheaded significant projects at Credit Saison,
 							notably leading the insourcing of a long-outsourced system and managing OpenAPI system operations.
 							My expertise spans across backend development with Java/Spring Boot, PHP, Python and front-end development using JavaScript (Svelte.js).
-							I'm well-versed in DevOps & CI/CD, employing tools such as Shell script, Linux, Docker, GitHub Action, and AWS.
+							I'm well-versed in DevOps & CI/CD, employing tools such as Shell script, Linux, Docker, GitHub Actions, and AWS.
 							I also have skills in Git, code review, MySQL, PostgreSQL, and agile development methodologies.
 							During my internship at OnePlus, I developed a lightweight AI training database and a predictive app preloader.
 							I am fluent in Mandarin, Japanese, and English.
@@ -243,7 +240,7 @@
 											</div>
 										</li>
 										<li class="mb-2">
-											<div class="resume-skill-name">GitHub Action</div>
+											<div class="resume-skill-name">GitHub Actions</div>
 											<div class="progress resume-progress">
 												<div class="progress-bar theme-progress-bar-dark" role="progressbar"
 													style="width: 90%" aria-valuenow="25" aria-valuemin="0"
