Rearrange for PDF

--- a/index.html
+++ b/index.html
@@ -65,14 +65,11 @@
 					<h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Career Summary</h2>
 					<div class="resume-section-content">
 						<p class="mb-0">
-							As an experienced Software Engineer with over 4 years in the field, 
-							I have spearheaded significant projects at Credit Saison,
-							notably leading the insourcing of a long-outsourced system and managing OpenAPI system operations.
-							My expertise spans across backend development with Java/Spring Boot, PHP, Python and front-end development using JavaScript (Svelte.js).
-							I'm well-versed in DevOps & CI/CD, employing tools such as Shell script, Linux, Docker, GitHub Actions, and AWS.
-							I also have skills in Git, code review, MySQL, PostgreSQL, and agile development methodologies.
-							During my internship at OnePlus, I developed a lightweight AI training database and a predictive app preloader.
-							I am fluent in Mandarin, Japanese, and English.
+							As a Software Engineer with 3+ years of experience, I've led key projects at Credit Saison and managed OpenAPI systems.
+							I'm proficient in backend and frontend development, utilizing tools such as Java/Spring Boot, PHP, Python, and JavaScript.
+							I am skilled in DevOps & CI/CD, including Shell script, Linux, Docker, and AWS.
+							During my OnePlus internship, I developed an AI training database and a predictive app preloader.
+							I communicate effectively in Mandarin, Japanese, and English.
 						</p>
 					</div>
 				</section><!--//summary-section-->
@@ -159,7 +156,7 @@
 								</div><!--//resume-timeline-->
 							</div>
 						</section><!--//experience-section-->
-						<section class="resume-section experience-section mb-5">
+						<section class="resume-section experience-section mb-0">
 							<h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Certifications
 							</h2>
 							<div class="resume-timeline-item-header mb-2">
@@ -179,7 +176,7 @@
 						</section>
 					</div>
 					<div class="col-lg-3">
-						<section class="resume-section skills-section mb-5">
+						<section class="resume-section skills-section mb-3">
 							<h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Skills &amp;
 								Tools</h2>
 							<div class="resume-section-content">
@@ -296,7 +293,7 @@
 							</div>
 						</section><!--//skills-section-->
 
-						<section class="resume-section education-section mb-5">
+						<section class="resume-section education-section mb-3">
 							<h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Education</h2>
 							<div class="resume-section-content">
 								<ul class="list-unstyled">
@@ -314,7 +311,7 @@
 							</div>
 						</section><!--//education-section-->
 
-						<section class="resume-section language-section mb-5">
+						<section class="resume-section language-section mb-0">
 							<h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Languages</h2>
 							<div class="resume-section-content">
 								<ul class="list-unstyled">
