--- a/index.html
+++ b/index.html
@@ -108,8 +108,6 @@
 													<li>Designed flexible code architecture to adapt to constantly
 														changing requirements.</li>
 													<li>Provide support to team members and conduct code reviews.</li>
-													<li>Break down tasks and distribute them to ensure smooth
-														implementation.</li>
 												</ul>
 											</div><!--//resume-timeline-item-desc-->
 										</div>
@@ -117,7 +115,7 @@
 											<div class="resume-timeline-item-header mb-2">
 												<div class="d-flex flex-column flex-md-row">
 													<h4 class="resume-position-title font-weight-bold mb-1">
-														Manage and mantain openAPI system
+														Manage and mantain OpenAPI system
 													</h4>
 												</div>
 											</div>
@@ -127,12 +125,9 @@
 												<h4 class="resume-timeline-item-desc-heading font-weight-bold">
 													Responsibilities:</h4>
 												<ul>
-													<li>Develop SDK with python for daily mantainence and test</li>
-													<li>Adopt automatic test framework for user acceptance test </li>
-													<li>Automate daily tasks using shell scripting, Python, Docker, and
-														more.</li>
-													<li>Collaborate with user departments and vendors to perform system
-														development.</li>
+													<li>Develop SDK with Python for daily mantainence and test.</li>
+													<li>Adopt automatic test framework for user acceptance test.</li>
+													<li>Automate daily tasks using ShellScript, Python, Docker.</li>
 												</ul>
 											</div><!--//resume-timeline-item-desc-->
 										</div><!--//resume-timeline-item-->
